Updates Particle in a Box and adds new test to the Potential Energy Surface Computation

--- a/Particle in a Box/Particle in a Box.ipynb
+++ b/Particle in a Box/Particle in a Box.ipynb
@@ -28,8 +28,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dervivation of Particle in a 1D Box Solution\n",
+    "\n",
+    "$$\\hat{H}\\psi = E\\psi$$\n",
+    "The above is the Schrödinger equation with $\\hat{H}$ being the Hamiltonian, $\\psi$ representing the wavefunction of the system, and $E$ representing the energy of the system. <br>\n",
+    "$\\hat{H} = U + K$, with $U$ being the potential energy of the system, and $K$ being the kinetic energy. <br>\n",
+    "<br>\n",
+    "To begin to solve the 1D particle in box, we will first determine a function to represent the potential energy of the sytem, $U$. To allow the particle to soley exist wihin the respect of a box that begins at $x=0$ and ends at $x=L$, it can be stated that the potential beyond the boundries $x=0$ and $x=L$ are infinite, preventing the particle from escaping the box, and nothing between the boundaries of the box, allowing the particle to freely exist anywhere within the box. <br>\n",
+    "$$U(x) = \\begin{cases} \\, \\infty&  x \\geq 0 \\\\\n",
+    "                        0 & 0 < x < L \\\\\n",
+    "                           \\infty & x \\leq L \\end{cases}$$\n",
+    "<br>Now that the potential energy of the system is defined, the Kinetic Energy of the particle must also be defined, $K$. <br>\n",
+    "Kinetice energy is classically defined as $K = \\frac{1}{2}mv^2$, with $v$ representing the velocity of the system. Noting the defintion of momentum $P = mv$ the following can be derived: \n",
+    "$$\\begin{align} P &= mv \\\\\n",
+    "                P^2 &= m^2v^2 \\\\\n",
+    "                \\frac{P^2}{m} &= mv^2 = K \\\\\n",
+    "            \\end{align}$$\n",
+    "$K$ is expresed in terms of $P$ as there is a quantum operator that can retrive the momentum of the particle from the wavefunction, $\\hat{P}$. The operator is defined as follows: \n",
+    "$$\\hat{P}\\psi = -i\\hbar\\frac{\\partial}{\\partial x}\\psi$$\n",
+    "Writing $K$ using the definition of $\\hat{P}$ yields the following: \n",
+    "$$\\begin{align} K &= \\frac{1}{2} \\frac{\\hat{P}^2}{m} \\\\ \n",
+    "                K &= \\frac{1}{2} \\frac{(-i\\hbar\\frac{\\partial}{\\partial x})^2}{m} \\\\\n",
+    "                K &= \\frac{-\\hbar^2\\frac{\\partial^2}{\\partial x^2}}{2m}\n",
+    "    \\end{align}\n",
+    "$$ \n",
+    "Now we have the Hamiltonian for our system defined in terms of $U$ and $K$, and we can begin to solve the Schrödinger equation. \n",
+    "$$\\begin{align}\\hat{H}\\psi &= E\\psi \\\\\n",
+    "               (P(x) - \\frac{\\hbar^2\\frac{\\partial^2}{\\partial x^2}}{2m})\\psi &= E \\psi \\\\\n",
+    "               (-\\frac{\\hbar^2\\frac{\\partial^2}{\\partial x^2}}{2m})\\psi &= E\\psi &&\\mbox{Inside the box, } P(x) = 0\n",
+    "    \\end{align}\n",
+    "$$\n",
+    "From the above, it can been seen that the 2nd partial derivative of our function with respect to $x$ must produce the same wavefunction once again with a difference in sign. In order to determine $\\psi$, we can make and educated guess based upon its behaviour with derivaties. One example gueess would be:\n",
+    "$$A\\cos(kx) + B\\sin(kx)$$ \n",
+    "Since the scend derivatives of the functions reproduce the original functions off by a sign change. The guess can now be tested with the boundry coefficents to determine the values of the constants $A$ and $k$. In the boundry conditions at $x=0$ and $x=L$, the particle wavefunction must decay to zero as the potential is infinitly high at these points. In other words:\n",
+    "$$\\begin{align}\n",
+    "    \\psi(0) &= 0 &\\psi(L) &= 0 \\\\\n",
+    "    A\\cos(0) + B\\sin(0) &= 0 &A\\cos(kL) + B\\sin(kL) &= 0 \\\\\n",
+    "    A &= 0 &(0)\\cos(kL) + B\\sin(kL) &= 0 \\\\\n",
+    "    A&= 0  & B\\sin(kL) &= 0 \\\\\n",
+    "    A &= 0 &\\sin(kL) &= 0 \\\\\n",
+    "    A &= 0 &\\sin(n\\pi) &= 0 &&k=\\frac{n\\pi}{L}, \\; n\\in\\mathbb{Z}\n",
+    "\\end{align}$$\n",
+    "The values for $A$ and $k$ have been found, but in order to find the value of $B$, we must use the orthonormailty of the wavefunction as the particle must have a 100% chance of being somewhere within the box.\n",
+    "$$\\begin{align}\n",
+    "    \\int_0^L{|\\psi^2| dx} &= 1 \\\\\n",
+    "    \\int_0^L{A^2\\sin^2(\\frac{n\\pi x}{L}) dx} &= 1 \\\\\n",
+    "    A^2\\int_0^L{(\\frac{1-\\cos(\\frac{2n\\pi x}{L})}{2})dx} &= 1 &&\\mbox{Use Trig. Identity}\\\\\n",
+    "    \\frac{A^2}{2}\\int_0^L{(1-\\cos(\\frac{2n\\pi x}{L}))dx} &= 1 \\\\\n",
+    "    \\frac{A^2}{2} \\cdot ( x + \\frac{\\sin(\\frac{2n\\pi x}{L})}{\\frac{2n\\pi}{L}}) |^L_0 &= 1 \\\\\n",
+    "    \\frac{A^2}{2} \\cdot ( x + \\frac{L\\sin(\\frac{2n\\pi x}{L})}{2n\\pi})|_0^L &= 1 \\\\\n",
+    "    \\frac{A^2}{2} \\cdot ( L + \\frac{L\\sin(2n\\pi)}{2n\\pi} - 0 - \\frac{Lsin(0)}{2n\\pi}) &= 1 \\\\\n",
+    "    \\frac{A^2}{2} \\cdot L &= 1 \\\\\n",
+    "    A^2 &= \\frac{2}{L} \\\\\n",
+    "    A &= \\sqrt{\\frac{2}{L}}\n",
+    "\\end{align}$$ <br>\n",
+    "Thus, our final wavefunction for the 1D particle in a box is:\n",
+    "$$\\psi = \\sqrt{\\frac{2}{L}}\\sin(\\frac{n\\pi x}{L})$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +123,7 @@
     "#import all needed packages here\n",
     "import math\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interactive_output, fixed\n",
+    "from ipywidgets import interact, interactive_output\n",
     "from scipy.integrate import quad as integrate\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
     "from plotly.subplots import make_subplots\n",
@@ -70,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +172,7 @@
     "    yData = [ [] for n in qn]\n",
     "    prob = [ [] for n in qn ]\n",
     "    xData = [x * dx for x in range(points)]\n",
+    "    expec = [ [] for n in qn]\n",
     "\n",
     "    EData = [ [E(n, L, m)] * len(xData) for n in qn]\n",
     "\n",
@@ -119,7 +182,10 @@
     "            yData[nIndex].append( psi(x, n, L) )\n",
     "            prob[nIndex].append( abs(psi(x, n, L)) ** 2 )\n",
     "            \n",
-    "    return xData, yData, EData, prob\n",
+    "            integrand = lambda r : (psi(r, n, L) ** 2) * r\n",
+    "            expec[nIndex].append( integrate( integrand, 0, x)[0])\n",
+    "            \n",
+    "    return xData, yData, EData, prob, expec\n",
     "\n",
     "#------------------------------------------------------------------------\n",
     "\n",
@@ -127,9 +193,11 @@
     "#xData is a list of x points that are to be graphed\n",
     "#yData is a list of y points that are to be graphed\n",
     "#EData is a list of energy values to graph\n",
-    "#prob is the y values for the probabiliity of finding the particle in any part of the box\n",
+    "#prob is the y values for the probabiliity of finding the particle in any part of the box,\n",
+    "#expec is the expectation value for the position of the particle in the box\n",
     "#qn is a list of quantum numbers to graph\n",
-    "def graph(xData, yData, EData, prob, qn):\n",
+    "def graph(xData, yData, EData, prob, expec, qn):\n",
+    "    \n",
     "    figure = {\n",
     "        \"data\": [], \n",
     "        \"layout\":{\n",
@@ -145,6 +213,15 @@
     "            \"xaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
     "            \"yaxis\":{\"title\":\"Psi Squared\"},\n",
     "            \"title\":{\"text\":\"Wavefunction Probability\"}\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    figure3 = {\n",
+    "        \"data\":[],\n",
+    "        \"layout\":{\n",
+    "            \"xaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
+    "            \"yaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
+    "            \"title\":{\"text\":\"Position Expectation Values\"}\n",
     "        }\n",
     "    }\n",
     "    \n",
@@ -182,10 +259,22 @@
     "                \"name\":\"n=\" + str(n)\n",
     "            }\n",
     "        )\n",
+    "        \n",
+    "        figure3[\"data\"].append(\n",
+    "            {\n",
+    "                \"type\":\"scatter\",\n",
+    "                \"x\":xData,\n",
+    "                \"y\":expec[nIndex],\n",
+    "                \"mode\":\"lines\",\n",
+    "                \"connectgaps\":True,\n",
+    "                \"name\":\"n=\"+str(n)\n",
+    "            }\n",
+    "        )\n",
     "    \n",
     "    iplot(figure)\n",
     "    iplot(figure2)\n",
-    "\n",
+    "    iplot(figure3)\n",
+    "    \n",
     "#------------------------------------------------------------------------\n",
     "\n",
     "#main function used to allow the program to run with a graphic interface\n",
@@ -194,53 +283,66 @@
     "#points is the number of points to use to compute the data for the graph \n",
     "#       The more points used in the computation , the greater the resolution of the graph\n",
     "#m is the mass of the particle in A.U.\n",
-    "def main(qnInput, L, points, m=1):\n",
+    "#graphBool is a boolean representing whether the data should be graphed or not\n",
+    "def main(graphBool=True):\n",
     "    \n",
-    "    qn = []\n",
-    "    \n",
-    "    #perform input checking on qn\n",
-    "    for n in qnInput.split(\",\"):\n",
+    "    if(graphBool):\n",
+    "          \n",
+    "        qnInput = qnUI.value\n",
+    "        L = LUI.value\n",
+    "        points = pointsUI.value\n",
+    "        m = mUI.value\n",
     "        \n",
-    "        if(n.isspace() or n == \"\"):\n",
-    "            continue\n",
-    "        else:\n",
-    "            n.strip()\n",
+    "        #Reset the execute button's value and color\n",
+    "        executeButton.value = False\n",
     "        \n",
-    "        try:\n",
-    "            qn.append(int(n))\n",
-    "        except:\n",
-    "            print(\"Warning! Only numbers sparated by commas are considered valid input for quantum\" + \"numbers!\\n\" + str(n) + \" is not considered a valid quantum number.\")\n",
-    "            return\n",
-    "    \n",
-    "    qn = list(set(qn))\n",
-    "    data = [qn, L, points, m, points]\n",
-    "    \n",
-    "    #check that there are data values to compute \n",
-    "    if(len(qnInput) > 0 and L > 0):\n",
-    "        xData, yData, EData, prob = dataComputation(qn, L, points, m)\n",
-    "        graph(xData, yData, EData, prob, qn)\n",
-    "        main.oldData = data\n",
-    "    \n",
-    "        #Code to display the integral over the squared wavefunction \n",
-    "        #to demonstrate that the wavefunction is normalized\n",
-    "        mathString = \"<font size='5'>\"\n",
-    "        for n  in qn:\n",
-    "            psi2 = lambda x : abs(psi(x, n, L)) ** 2\n",
-    "            mathString += \"$\\int_0^{\" + str(L) + \"}{|\\psi_\" + str(n) + \"|^2dx} = \" + str(\n",
-    "                integrate(psi2, 0, L)[0]) + \"$<br>\"\n",
-    "        mathString += \"</font>\"\n",
+    "        qn = []\n",
+    "\n",
+    "        #perform input checking on qn\n",
+    "        for n in qnInput.split(\",\"):\n",
+    "\n",
+    "            if(n.isspace() or n == \"\"):\n",
+    "                continue\n",
+    "            else:\n",
+    "                n.strip()\n",
+    "            try:\n",
+    "                qn.append(int(n))\n",
+    "            except:\n",
+    "                print(\"Warning! Only numbers sparated by commas are considered valid input for quantum\" + \"numbers!\\n\" + str(n) + \" is not considered a valid quantum number.\")\n",
+    "                return\n",
+    "\n",
+    "        qn = list(set(qn))\n",
+    "        \n",
+    "        data = [qn, L, points, m, points]\n",
+    "        xData, yData, EData, prob, expec = dataComputation(qn, L, points, m)\n",
+    "        graph(xData, yData, EData, prob, expec, qn)\n",
+    "        \n",
+    "        #Print Oout Overlap Matrix Values in a nicely formatted manner\n",
+    "        mathString = \"<font size='5'>$\\qquad\"\n",
+    "        \n",
+    "        for n in qn:\n",
+    "            mathString += \"\\psi_{\" + str(n) + \"}\\qquad\" \n",
+    "        mathString += \"$<br>\"\n",
+    "        for row in qn:\n",
+    "            mathString += \"$\\psi_{\" + str(row) + \"}\\quad$\"\n",
+    "            for col in qn:\n",
+    "                psiI = lambda x : psi(x, row, L) * psi(x, col, L)\n",
+    "                mathString += \"$\" + str(abs(round(integrate(psiI, 0, L)[0], 4))) + \"\\quad\\;\\;\\;$\" \n",
+    "            mathString += \"<br>\"\n",
     "            \n",
+    "        mathString += \"</font>\"\n",
+    "\n",
     "        #display the latex string to the user\n",
     "        math = widgets.HTMLMath(\n",
     "            value = mathString,\n",
-    "            \n",
     "        )\n",
+    "         \n",
     "        display(math)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -248,12 +350,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc9cdb83abbd46c18d61264e3807e8d7",
+       "model_id": "a32e027721ee4a56a95628482bcca988",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Label(value='Quantum Number(s)'), Text(value='1, 2, 3', layout=Layout(margin='0 …"
+       "VBox(children=(HBox(children=(Label(value='Quantum Number(s)', layout=Layout(width='35%')), Text(value='1, 2, …"
       ]
      },
      "metadata": {},
@@ -262,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2bfda9fe9f64a138a90a247766def07",
+       "model_id": "dedc2ed14df54ee7a175b20b0e757339",
        "version_major": 2,
        "version_minor": 0
       },
@@ -279,47 +381,55 @@
     "qnUI = widgets.Text(\n",
     "    value = \"1, 2, 3\",\n",
     "    description = \"\", \n",
-    "    continous_update = False\n",
+    "    \n",
     ")\n",
-    "qnUI.layout.margin = \"0 0 0 80px\"\n",
     "qnLabel = widgets.Label(\"Quantum Number(s)\")\n",
-    "\n",
+    "qnLabel.layout.width = \"35%\"\n",
     "#Box Length Input System in Bohr Radius\n",
     "LUI = widgets.BoundedFloatText(\n",
-    "    value = 0,\n",
-    "    min = 0,\n",
+    "    value = 10,\n",
+    "    min = pow(10, -100),\n",
     "    max = pow(10, 100)\n",
     ")\n",
-    "LUI.layout.margin = \"0 0 0 40px\"\n",
     "LUILabel = widgets.Label(\"Box Length in Bohr Radius\")\n",
+    "LUILabel.layout.width = \"35%\"\n",
     "\n",
     "#Number of Points Input System, \n",
     "#The larger this number the greater the resolution of the graph will be\n",
-    "points = widgets.BoundedIntText(\n",
+    "pointsUI = widgets.BoundedIntText(\n",
     "    min = 0, \n",
     "    max = pow(10,100),\n",
     "    value = 200\n",
     ")\n",
-    "points.layout.margin = \"0 0 0 99px\"\n",
     "pointsLabel = widgets.Label(\"Number of Points\")\n",
+    "pointsLabel.layout.width = \"35%\"\n",
     "\n",
     "#Mass of the Particle in A.U.\n",
-    "m = widgets.BoundedIntText(\n",
+    "mUI = widgets.BoundedIntText(\n",
     "    min = 1,\n",
     "    max = pow(10, 100),\n",
     "    value = 1,\n",
     ")\n",
-    "m.layout.margin = \"0 0 0 62px\"\n",
     "mLabel = widgets.Label(\"Mass of Particle in A.U.\")\n",
+    "mLabel.layout.width = \"35%\"\n",
+    "\n",
+    "#button to allow the user to graph the specified settings for the particle in a box\n",
+    "executeButton = widgets.ToggleButton(\n",
+    "    description = \"Graph\",\n",
+    "    disabled = False,\n",
+    ")\n",
+    "executeButton.layout.margin = \"3% 0 0 30%\"\n",
     "\n",
     "#prepare layout for the input widgets\n",
     "#then start the widgets to run\n",
-    "layout = widgets.VBox([ widgets.HBox([qnLabel, qnUI]),\n",
+    "layout = widgets.VBox([widgets.HBox([qnLabel, qnUI]),\n",
     "                       widgets.HBox([LUILabel, LUI]),\n",
-    "                       widgets.HBox([mLabel, m]),\n",
-    "                       widgets.HBox([pointsLabel, points]),\n",
+    "                       widgets.HBox([mLabel, mUI]),\n",
+    "                       widgets.HBox([pointsLabel, pointsUI]),\n",
+    "                       widgets.HBox([executeButton])\n",
     "                      ])\n",
-    "ui = interactive_output(main, {\"qnInput\":qnUI, \"L\":LUI, \"points\":points, \"m\":m} )\n",
+    "\n",
+    "ui = interactive_output(main, { \"graphBool\":executeButton} )\n",
     "display( \n",
     "     layout, ui\n",
     " )"
