Updated RKR Class for use in Potential Energy Notebook

--- a/Potential Energy Surface/Potential Energy Surface.ipynb
+++ b/Potential Energy Surface/Potential Energy Surface.ipynb
@@ -38,17 +38,19 @@
     "\n",
     "#Import All Required Packages Here\n",
     "import ipywidgets as widgets\n",
-    "import numpy as np\n",
     "from IPython.display import clear_output\n",
     "from diatomicPotentials import extendedRydberg\n",
-    "from diatomicPotentials import morsePotential\n",
-    "from basisFunctions import harmonicOscillator\n",
-    "from scipy import integrate\n",
     "from RKRClass import RKR\n",
-    "from scipy.misc import derivative as ddx\n",
+    "\n",
     "\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
-    "init_notebook_mode(connected=True)"
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "#May be changing later \n",
+    "from scipy import integrate\n",
+    "import numpy as np\n",
+    "from basisFunctions import harmonicOscillator\n",
+    "from scipy.misc import derivative as ddx"
    ]
   },
   {
@@ -166,9 +168,9 @@
     "def buildPotential(R, E):\n",
     "        \n",
     "    print(\"Building Rydberg Potential Fit\")\n",
-    "    \n",
     "    rydberg.fitPotential(R, E)\n",
     "    \n",
+    "    print(\"Graphing Rydberg Potential\")\n",
     "    ER = rydberg.graphData(0, R[-1] + 1)\n",
     "    \n",
     "    plot(ER[0], ER[1], \"Extended Rydberg Fit\")\n",
@@ -244,14 +246,32 @@
     "#Handles logic for building potential curve from the diatomic constants\n",
     "def diatomicConstantsLogic(buttonData):\n",
     "    \n",
-    "    print(\"Building Potential from RKR\")\n",
+    "    clear_output()\n",
+    "    displayDiatomicConstantsMenu()\n",
     "    \n",
     "    R, E = rkr.graphData()\n",
-    "    plot(R, E, \"RKR Potential\")\n",
-    "    buildPotential(R, E)\n",
     "    \n",
-    "    iplot(figure)\n",
+    "    if not any(filter(np.isnan, R)):\n",
+    "        plot(R, E, \"RKR Potential\")\n",
+    "        buildPotential(R, E)\n",
+    "        iplot(figure)\n",
+    "    else:\n",
+    "        print(\"RKR Computation Failed!\")\n",
+    "        print(\"Please Ensure Your Diatomic Constant Values Are Correct!\")\n",
+    "        print(\"Or Contact zeri@chapman.edu To Report The Error\")\n",
+    "    \n",
+    "##########################################################################################\n",
     "\n",
+    "def displayDiatomicConstantsMenu():\n",
+    "    \n",
+    "    rkrWidgets = rkr.widgetInput()\n",
+    "    \n",
+    "    display(rkrWidgets[0])\n",
+    "    display(rkrWidgets[1])\n",
+    "    display(startButton)\n",
+    "        \n",
+    "    startButton.on_click(diatomicConstantsLogic)\n",
+    "    \n",
     "##########################################################################################\n",
     "\n",
     "#Main Function used to exeute main decision logic of the program\n",
@@ -265,16 +285,10 @@
     "    if(buttonData[\"new\"] == \"Use File\"):\n",
     "        loadFile()\n",
     "    else:\n",
-    "        \n",
+    "        global startButton\n",
     "        startButton = widgets.Button(description = \"Start Calculation\", button_style=\"Info\")\n",
     "        \n",
-    "        rkrWidgets = rkr.widgetInput()\n",
-    "    \n",
-    "        display(rkrWidgets[0])\n",
-    "        display(rkrWidgets[1])\n",
-    "        display(startButton)\n",
-    "        \n",
-    "        startButton.on_click(diatomicConstantsLogic)"
+    "        displayDiatomicConstantsMenu()"
    ]
   },
   {
@@ -285,25 +299,98 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please choose how you like to set up the Extended-Rydberg Equation:\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "653dbe6b76104fd6a1b67a43cbcc39ac",
+       "model_id": "de1bbffabacd4aea8ecedf7ed28bd1e3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ToggleButtons(button_style='info', options=('Use File', 'Use Diatomic Constants'), tooltips=('', 'Use Diatomic…"
+       "interactive(children=(FloatText(value=0.0, description='$alpha_e$ in $cm^{-1}$'), FloatText(value=0.0, descrip…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faf89cd8b86547638df901bb4f037088",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatText(value=1.0, description='$\\\\mu$ in AMU'), Output()), _dom_classes=('widget-inte…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0e54f668f4074a3ebf4cc359838d643d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='info', description='Start Calculation', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Generating RKR Potential\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|                                                                                         | 0/1250 [00:00<?, ?it/s]A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:135: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in double_scalars\n",
+      "\n",
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:136: IntegrationWarning:\n",
+      "\n",
+      "The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
+      "\n",
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:127: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in double_scalars\n",
+      "\n",
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:144: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in double_scalars\n",
+      "\n",
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:145: IntegrationWarning:\n",
+      "\n",
+      "The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
+      "\n",
+      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:145: RuntimeWarning:\n",
+      "\n",
+      "invalid value encountered in double_scalars\n",
+      "\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1250/1250 [00:08<00:00, 155.45it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RKR Computation Failed!\n",
+      "Please Ensure Your Diatomic Constant Values Are Correct!\n",
+      "Or Contact zeri@chapman.edu To Report The Error\n"
+     ]
     }
    ],
    "source": [
