Adds Start of 2D Particle in a Box

--- a/Particle in a Box/Particle in a Box.ipynb
+++ b/Particle in a Box/Particle in a Box.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "## 1D Particle in a Box \n",
     "<br>\n",
+    "All material within this notebook is based upon <i>Introduction to Computational Physical Chemistry</i>, by Joshua Schrier\n",
+    "<br><br>\n",
     "Given a quantum mechanical particle in a box, such that the potential outside of the box is infinite, while the potential inside of the box is 0, the analytical solution to the Schrödinger equation is: <br>\n",
     "<br>\n",
     "$$ \\psi_n(x) = \\sqrt{\\frac{2}{L}} \\sin(\\frac{nx\\pi}{L})$$ <br>\n",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -122,9 +124,11 @@
    "source": [
     "#import all needed packages here\n",
     "import math\n",
+    "import color\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interactive_output\n",
     "from scipy.integrate import quad as integrate\n",
+    "from pibUI import UI\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
     "from plotly.subplots import make_subplots\n",
     "init_notebook_mode(connected=True)"
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +184,7 @@
     "    for nIndex, n in enumerate(qn):\n",
     "        for x in xData: \n",
     "            yData[nIndex].append( psi(x, n, L) )\n",
-    "            prob[nIndex].append( abs(psi(x, n, L)) ** 2 )\n",
+    "            prob[nIndex].append( psi(x, n, L) ** 2 )\n",
     "            \n",
     "            integrand = lambda r : (psi(r, n, L) ** 2) * r\n",
     "            expec[nIndex].append( integrate( integrand, 0, x)[0])\n",
@@ -203,7 +207,7 @@
     "        \"layout\":{\n",
     "            \"xaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
     "            \"yaxis\":{\"title\": \"Hartrees\"},\n",
-    "            \"title\":{\"text\":\"1D Particle in a Box\"}\n",
+    "            \"title\":{\"text\":\"$\\mbox{Wavefunctions: } \\psi$\"}\n",
     "        }\n",
     "    }\n",
     "\n",
@@ -212,7 +216,7 @@
     "        \"layout\":{\n",
     "            \"xaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
     "            \"yaxis\":{\"title\":\"Psi Squared\"},\n",
-    "            \"title\":{\"text\":\"Wavefunction Probability\"}\n",
+    "            \"title\":{\"text\":\"$\\mbox{Wavefunction Probability: } \\psi^2$\"}\n",
     "        }\n",
     "    }\n",
     "    \n",
@@ -221,11 +225,14 @@
     "        \"layout\":{\n",
     "            \"xaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
     "            \"yaxis\":{\"title\":\"Distance in Bohr Radius\"},\n",
-    "            \"title\":{\"text\":\"Position Expectation Values\"}\n",
+    "            \"title\":{\"text\":\"$\\mbox{Position Expectation Values: } \\int_0^{L}{\\psi^2 dx}$\"}\n",
     "        }\n",
     "    }\n",
     "    \n",
     "    for nIndex, n in enumerate(qn):\n",
+    "        \n",
+    "        lineColor = color.getColor()        \n",
+    "        \n",
     "        figure[\"data\"].append(\n",
     "            {\n",
     "                \"type\":\"scatter\",\n",
@@ -233,10 +240,11 @@
     "                \"y\":[y + EData[nIndex][index] for index, y in enumerate(yData[nIndex])],\n",
     "                \"name\": \"n=\" + str(n) + \" Psi\",\n",
     "                \"connectgaps\": True,\n",
-    "                \"mode\":\"lines\"\n",
+    "                \"mode\":\"lines\",\n",
+    "                \"line\":{\"color\":lineColor}\n",
     "            }\n",
     "        )\n",
-    "\n",
+    "        \n",
     "        figure[\"data\"].append(\n",
     "           { \n",
     "               \"type\":\"scatter\",\n",
@@ -245,7 +253,7 @@
     "               \"name\":\"n=\" + str(n) + \" Energy\",\n",
     "               \"connectgaps\": True,   \n",
     "               \"mode\":\"lines\",\n",
-    "               \"line\":{\"dash\":\"dash\"}\n",
+    "               \"line\":{\"dash\":\"dash\", \"color\":lineColor}\n",
     "           }\n",
     "        )\n",
     "        \n",
@@ -256,7 +264,8 @@
     "                \"y\":prob[nIndex],\n",
     "                \"mode\":\"lines\",\n",
     "                \"connectgaps\":True,\n",
-    "                \"name\":\"n=\" + str(n)\n",
+    "                \"name\":\"n=\" + str(n),\n",
+    "                \"line\":{\"color\":lineColor}\n",
     "            }\n",
     "        )\n",
     "        \n",
@@ -267,7 +276,8 @@
     "                \"y\":expec[nIndex],\n",
     "                \"mode\":\"lines\",\n",
     "                \"connectgaps\":True,\n",
-    "                \"name\":\"n=\"+str(n)\n",
+    "                \"name\":\"n=\"+str(n),\n",
+    "                \"line\":{\"color\":lineColor}\n",
     "            }\n",
     "        )\n",
     "    \n",
@@ -284,7 +294,7 @@
     "#       The more points used in the computation , the greater the resolution of the graph\n",
     "#m is the mass of the particle in A.U.\n",
     "#graphBool is a boolean representing whether the data should be graphed or not\n",
-    "def main(graphBool=True):\n",
+    "def main(graphBool=True, dimension=1):\n",
     "    \n",
     "    if(graphBool):\n",
     "          \n",
@@ -318,11 +328,11 @@
     "        graph(xData, yData, EData, prob, expec, qn)\n",
     "        \n",
     "        #Print Oout Overlap Matrix Values in a nicely formatted manner\n",
-    "        mathString = \"<font size='5'>$\\qquad\"\n",
+    "        mathString = \"<font size='5'>Overlap Values:$\\;\\int_0^L{\\psi_i\\psi_j dr}$<br>\" \n",
     "        \n",
     "        for n in qn:\n",
-    "            mathString += \"\\psi_{\" + str(n) + \"}\\qquad\" \n",
-    "        mathString += \"$<br>\"\n",
+    "            mathString += \"$\\qquad\\psi_{\" + str(n) + \"}$\" \n",
+    "        mathString += \"<br>\"\n",
     "        for row in qn:\n",
     "            mathString += \"$\\psi_{\" + str(row) + \"}\\quad$\"\n",
     "            for col in qn:\n",
@@ -336,13 +346,13 @@
     "        math = widgets.HTMLMath(\n",
     "            value = mathString,\n",
     "        )\n",
-    "         \n",
+    "        \n",
     "        display(math)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -350,7 +360,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a32e027721ee4a56a95628482bcca988",
+       "model_id": "cbcbd1b55cb54f08a591a550d08d1e1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +374,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dedc2ed14df54ee7a175b20b0e757339",
+       "model_id": "c9b45c63f6a44285b3e3a66b0813f664",
        "version_major": 2,
        "version_minor": 0
       },
@@ -380,8 +390,7 @@
     "#Quantum Numer Input System\n",
     "qnUI = widgets.Text(\n",
     "    value = \"1, 2, 3\",\n",
-    "    description = \"\", \n",
-    "    \n",
+    "    description = \"\",  \n",
     ")\n",
     "qnLabel = widgets.Label(\"Quantum Number(s)\")\n",
     "qnLabel.layout.width = \"35%\"\n",
@@ -434,6 +443,51 @@
     "     layout, ui\n",
     " )"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2D Particle in a Box\n",
+    "<br>\n",
+    "The 2D Particle in a box can be handled as the case of two 1D particles in a box, meaning that one 1D solution represents the x-axis while the other represents the y-axis. In more detail, the 2D eigenstates are the multiple of the respective 1D eigenstates, and the eigen values are the sum of the respective 1D eigen values. This can be represented as follows:\n",
+    "<br><br>\n",
+    "$$\\begin{align}\n",
+    "    \\psi_{2D}(x,y) &= \\psi_{1D}(x, n_x)\\psi_{1D}(y, n_y) \\\\\n",
+    "    \\psi_{2D}(x,y) &= \\left(\\sqrt{\\frac{2}{L_x}}\\sin\\left(\\frac{n_x\\pi x}{L_x}\\right)\\right)\\left(\\sqrt{\\frac{2}{L_y}}\\sin\\left(\\frac{n_y\\pi y}{L_y}\\right)\\right)  \\\\\n",
+    "    \\psi_{2D} &= \\frac{2}{\\sqrt{L_xL_y}}\\sin\\left(\\frac{n_x\\pi x}{L_x}\\right)\\sin\\left(\\frac{n_y\\pi y}{L_y}\\right)\n",
+    "\\end{align}$$\n",
+    "<br><br>\n",
+    "$$\\begin{align}\n",
+    "    E_{2D}(n_x, n_y) &= E_{1D}(n_x) + E_{1D}(n_y) \\\\\n",
+    "    E_{2D}(n) &= \\frac{\\hbar^2\\pi^2n_x^2}{2mL_x^2} + \\frac{\\hbar^2\\pi^2n_y^2}{2mL_y^2} \\\\\n",
+    "    E_{2D}(n) &= \\frac{\\hbar^2\\pi^2}{2m}\\left(\\frac{n_x^2}{L_x}+\\frac{n_y^2}{L_y}\\right)\n",
+    "\\end{align}$$\n",
+    "<br><br>\n",
+    "For the 2D particle in a box case, there are circumstances under where the energy of the system is equal for diffrent values of $n_x$ and $n_y$. States with the same energy value are said to be \"degenerate.\" As the example, the state with $n_x=1,\\; n_y=2$ and the state with $n_x=2,\\; n_y=1$ are degenerate."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#All functions defined here\n",
+    "\n",
+    "#Computes the plotable data for the 2D Particle in a Box Simulation\n",
+    "def compute2DData():\n",
+    "    pass\n",
+    "\n",
+    "#------------------------------------------------------------------------\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
