Adds Start of Vibrational Wave Function Notebook
-Adds Vibrational Wavefunction Notebook
-Adds Harmonic Oscillator Wavefunction Notebook
-Fixed Left Asymptote Issue with RKR Computation

--- a/Potential Energy Surface/Potential Energy Surface.ipynb
+++ b/Potential Energy Surface/Potential Energy Surface.ipynb
@@ -171,7 +171,7 @@
     "    rydberg.fitPotential(R, E)\n",
     "    \n",
     "    print(\"Graphing Rydberg Potential\")\n",
-    "    ER = rydberg.graphData(0, R[-1] + 1)\n",
+    "    ER = rydberg.graphData(0, R[-1] + 4)\n",
     "    \n",
     "    plot(ER[0], ER[1], \"Extended Rydberg Fit\")\n",
     "        \n",
@@ -249,7 +249,7 @@
     "    clear_output()\n",
     "    displayDiatomicConstantsMenu()\n",
     "    \n",
-    "    R, E = rkr.graphData()\n",
+    "    R, E = rkr.graphData(resolution = .1, endPoint=99)\n",
     "    \n",
     "    if not any(filter(np.isnan, R)):\n",
     "        plot(R, E, \"RKR Potential\")\n",
@@ -299,98 +299,25 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de1bbffabacd4aea8ecedf7ed28bd1e3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatText(value=0.0, description='$alpha_e$ in $cm^{-1}$'), FloatText(value=0.0, descrip…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faf89cd8b86547638df901bb4f037088",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatText(value=1.0, description='$\\\\mu$ in AMU'), Output()), _dom_classes=('widget-inte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e54f668f4074a3ebf4cc359838d643d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='info', description='Start Calculation', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Generating RKR Potential\n"
+      "Please choose how you like to set up the Extended-Rydberg Equation:\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|                                                                                         | 0/1250 [00:00<?, ?it/s]A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:135: RuntimeWarning:\n",
-      "\n",
-      "divide by zero encountered in double_scalars\n",
-      "\n",
-      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:136: IntegrationWarning:\n",
-      "\n",
-      "The occurrence of roundoff error is detected, which prevents \n",
-      "  the requested tolerance from being achieved.  The error may be \n",
-      "  underestimated.\n",
-      "\n",
-      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:127: RuntimeWarning:\n",
-      "\n",
-      "divide by zero encountered in double_scalars\n",
-      "\n",
-      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:144: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in double_scalars\n",
-      "\n",
-      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:145: IntegrationWarning:\n",
-      "\n",
-      "The occurrence of roundoff error is detected, which prevents \n",
-      "  the requested tolerance from being achieved.  The error may be \n",
-      "  underestimated.\n",
-      "\n",
-      "A:\\School\\Chapman\\Research\\QM\\CatLab_CompChem\\Potential Energy Surface\\RKRClass.py:145: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in double_scalars\n",
-      "\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1250/1250 [00:08<00:00, 155.45it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RKR Computation Failed!\n",
-      "Please Ensure Your Diatomic Constant Values Are Correct!\n",
-      "Or Contact zeri@chapman.edu To Report The Error\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5b5837eb07384c94a24de1243c102840",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ToggleButtons(button_style='info', options=('Use File', 'Use Diatomic Constants'), tooltips=('', 'Use Diatomic…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
